--- a/pages/blogs/what-is-a-blog-anyway/index.mdx
+++ b/pages/blogs/what-is-a-blog-anyway/index.mdx
@@ -3,7 +3,7 @@ import banner from "./landing.webp";
 import Image from "next/image";
 
 export const meta = {
-  author: "Tyler Durden",
+  author: "Romain BOBOE",
   date: "2022-09-02",
   title: "What is a blog anyway",
   description:
